# staticrypt-rs

./: Cargo.toml  LICENSE  README.md  flake.nix  testfile.txt  treefmt.nix
.github/workflows/: nix-ci.yml  publish-crate.yml
macros/: Cargo.toml
macros/src/: env.rs  file.rs  lib.rs  literal.rs  util.rs
src/: lib.rs
testbin/: Cargo.toml
testbin/src/: main.rs
