[package]
description = "Static encryption for string literals and binary data"
name = "staticrypt"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true

[workspace]
members = [".", "macros", "testbin"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Naxdy/staticrypt"
version = "1.1.1"
authors = ["Naxdy <naxdy@naxdy.org>"]

[workspace.dependencies]
aes-gcm = "0.10.3"

[dependencies]
aes-gcm.workspace = true
staticrypt_macros = { version = "1.1.1", path = "macros" }
