[package]
description = "Static encryption for string literals and binary data"
name = "staticrypt"
documentation = "https://docs.rs/staticrypt"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true

[lints]
workspace = true

[workspace]
members = [".", "macros", "testbin"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = 0 }

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Naxdy/staticrypt-rs"
version = "1.2.2"
authors = ["Naxdy <naxdy@naxdy.org>"]

[workspace.dependencies]
aes-gcm = "0.10.3"

[dependencies]
aes-gcm.workspace = true
staticrypt_macros = { version = "1.2.2", path = "macros" }
